Added explicit section close tag to section 'status document' (id="sotd")

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		</section>
 
 		<!-- status document -->
-		<section id='sotd'/>
+		<section id='sotd'></section>
 
 		<!-- inleiding -->
 		<section id='inleiding' class='generic informative'>
