Herhaling (dubbeling) van vermelding 'Dit onderdeel is niet normatief' in nieuwe sectie '3.3 Samenhang en consistentie tussen verschillende registratieobjecten in het Grondwaterdomein' ongedaan gemaakt.

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 			<!-- (expected) link to location on docs.geostandaarden; 'https://docs.geostandaarden.nl/bro/gen/gm/data/Domein grondwatermonitoring in de BRO.html'. -->
 			
 			<!-- 3.3 Samenhang en consistentie tussen verschillende registratieobjecten in het Grondwaterdomein -->
-			<section id="samenhang ROs in grondwater" class='generic informative' data-include='https://raw.githubusercontent.com/BROprogramma/generiek/gh-pages/gm/data/Samenhang_RO_GM_domein.html'></section>
+			<section id="Grondwatermonitoring.Samenhang en consistentie GM-ROs" data-include='https://raw.githubusercontent.com/BROprogramma/generiek/gh-pages/gm/data/Samenhang_RO_GM_domein.html'></section>
 			<!-- (expected) link to location on docs.geostandaarden; 'https://docs.geostandaarden.nl/bro/gen/gm/data/Samenhang_RO_GM_domein.html'. -->
 		</section>
 
