--- a/data/GMW-cat.respec.html
+++ b/data/GMW-cat.respec.html
@@ -41,7 +41,7 @@
       </section>
    <section>
       <h2>Het domeinmodel   </h2>
-      <div class="imageinfo overview"><img src="data/Images/EAID_E820AF53_7FB7_42e8_95C4_297D746526CE.png" usemap="#imagemap-EAID_E820AF53_7FB7_42e8_95C4_297D746526CE" alt="Diagram &#xA;                        &#xA;                     "><map name="imagemap-EAID_E820AF53_7FB7_42e8_95C4_297D746526CE"><area shape="rect" alt="Registratieobject" coords="655,42,928,217" href="#global_class_Model_Registratieobject"><area shape="rect" alt="Geotechnisch Sondeeronderzoek" coords="1336,651,1562,755" href="#global_class_Model_GeotechnischSondeeronderzoek"><area shape="rect" alt="Verkenning" coords="1116,614,1238,665" href="#global_class_Model_Verkenning"><area shape="rect" alt="Booronderzoek" coords="1336,535,1562,639" href="#global_class_Model_Booronderzoek"><area shape="rect" alt="Monitoringbuis" coords="534,805,1025,1234" href="#global_class_Model_Monitoringbuis"><area shape="rect" alt="Toegepast materiaal" coords="534,1299,806,1438" href="#global_class_Model_Toegepastmateriaal"><area shape="rect" alt="Ingeplaatst deel" coords="1168,970,1482,1108" href="#global_class_Model_Ingeplaatstdeel"><area shape="rect" alt="Zandvang" coords="1168,805,1370,910" href="#global_class_Model_Zandvang"><area shape="rect" alt="Grondwatermonitoringput" coords="564,274,1006,756" href="#global_class_Model_Grondwatermonitoringput"><area shape="rect" alt="Geo-ohmkabel" coords="147,801,345,946" href="#global_class_Model_Geoohmkabel"><area shape="rect" alt="Filter" coords="656,1472,924,1647" href="#global_class_Model_Filter"><area shape="rect" alt="Elektrode" coords="82,1017,411,1172" href="#global_class_Model_Elektrode"><area shape="rect" alt="Stijgbuisdeel" coords="779,1695,993,1799" href="#global_class_Model_Stijgbuisdeel"></map><p><b>Grondwatermonitorput (GMW)</b></p>
+      <div class="imageinfo overview"><img src="data/Images/EAID_E820AF53_7FB7_42e8_95C4_297D746526CE.png" usemap="#imagemap-EAID_E820AF53_7FB7_42e8_95C4_297D746526CE" alt="Diagram &#xA;                        &#xA;                     "><map name="imagemap-EAID_E820AF53_7FB7_42e8_95C4_297D746526CE"><area shape="rect" alt="Registratieobject" coords="656,42,929,217" href="#global_class_Model_Registratieobject"><area shape="rect" alt="Geotechnisch Sondeeronderzoek" coords="1338,652,1565,756" href="#global_class_Model_GeotechnischSondeeronderzoek"><area shape="rect" alt="Verkenning" coords="1118,615,1240,666" href="#global_class_Model_Verkenning"><area shape="rect" alt="Booronderzoek" coords="1338,536,1565,640" href="#global_class_Model_Booronderzoek"><area shape="rect" alt="Monitoringbuis" coords="534,806,1026,1235" href="#global_class_Model_Monitoringbuis"><area shape="rect" alt="Toegepast materiaal" coords="534,1301,808,1440" href="#global_class_Model_Toegepastmateriaal"><area shape="rect" alt="Ingeplaatst deel" coords="1170,972,1484,1110" href="#global_class_Model_Ingeplaatstdeel"><area shape="rect" alt="Zandvang" coords="1170,806,1372,912" href="#global_class_Model_Zandvang"><area shape="rect" alt="Grondwatermonitoringput" coords="564,275,1007,757" href="#global_class_Model_Grondwatermonitoringput"><area shape="rect" alt="Geo-ohmkabel" coords="148,802,346,947" href="#global_class_Model_Geoohmkabel"><area shape="rect" alt="Filter" coords="657,1475,925,1650" href="#global_class_Model_Filter"><area shape="rect" alt="Elektrode" coords="82,1018,411,1174" href="#global_class_Model_Elektrode"><area shape="rect" alt="Stijgbuisdeel" coords="780,1697,995,1801" href="#global_class_Model_Stijgbuisdeel"></map><p><b>Grondwatermonitorput (GMW)</b></p>
       </div>
    </section>
    <section>
@@ -170,17 +170,7 @@
                   </tr>
                   <tr>
                      <th>&nbsp;&nbsp;Naam</th>
-                     <td>
-                        KvK-nummer
-                        </td>
-                  </tr>
-                  <tr>
-                     <th>&nbsp;&nbsp;Type</th>
-                     <td>Code</td>
-                  </tr>
-                  <tr>
-                     <th>&nbsp;&nbsp;Opbouw</th>
-                     <td>NNNNNNNN</td>
+                     <td>KvK-nummer</td>
                   </tr>
                   <tr>
                      <th>Regels</th>
@@ -1327,7 +1317,7 @@
                </tbody>
             </table>
             </section>
-         <section id="detail_d77241e6039">
+         <section id="detail_d77227e6039">
             <h4>  aangeleverde locatie</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -1366,7 +1356,7 @@
                </tbody>
             </table>
          </section>
-         <section id="detail_d77241e6224">
+         <section id="detail_d77227e6224">
             <h4>  aangeleverde verticale positie</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -1404,7 +1394,7 @@
                </tbody>
             </table>
          </section>
-         <section id="detail_d77241e6409">
+         <section id="detail_d77227e6409">
             <h4>  gestandaardiseerde locatie</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -1443,7 +1433,7 @@
                </tbody>
             </table>
          </section>
-         <section id="detail_d77241e6594">
+         <section id="detail_d77227e6594">
             <h4>  registratiegeschiedenis</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -1481,7 +1471,7 @@
                </tbody>
             </table>
          </section>
-         <section id="detail_d77241e6779">
+         <section id="detail_d77227e6779">
             <h4>  putgeschiedenis</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -1520,7 +1510,7 @@
                </tbody>
             </table>
          </section>
-         <section id="detail_d77241e6964">
+         <section id="detail_d77227e6964">
             <h4>  monitoringbuis</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -2425,7 +2415,7 @@
                </tbody>
             </table>
             </section>
-         <section id="detail_d77241e10081">
+         <section id="detail_d77227e10081">
             <h4>  tussentijdse gebeurtenis</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -4003,7 +3993,7 @@
                </tbody>
             </table>
             </section>
-         <section id="detail_d77241e15882">
+         <section id="detail_d77227e15882">
             <h4>  toegepast materiaal</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -4042,7 +4032,7 @@
                </tbody>
             </table>
          </section>
-         <section id="detail_d77241e16085">
+         <section id="detail_d77227e16085">
             <h4>  filter</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -4081,7 +4071,7 @@
                </tbody>
             </table>
          </section>
-         <section id="detail_d77241e16288">
+         <section id="detail_d77227e16288">
             <h4>  stijgbuisdeel</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -4120,7 +4110,7 @@
                </tbody>
             </table>
          </section>
-         <section id="detail_d77241e16491">
+         <section id="detail_d77227e16491">
             <h4>  zandvang</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -4159,7 +4149,7 @@
                </tbody>
             </table>
          </section>
-         <section id="detail_d77241e16694">
+         <section id="detail_d77227e16694">
             <h4>  ingeplaatst deel</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -4198,7 +4188,7 @@
                </tbody>
             </table>
          </section>
-         <section id="detail_d77241e16897">
+         <section id="detail_d77227e16897">
             <h4>  geo-ohmkabel</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -5054,7 +5044,7 @@
                </tbody>
             </table>
             </section>
-         <section id="detail_d77241e20285">
+         <section id="detail_d77227e20285">
             <h4>  elektrode</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -5743,25 +5733,6 @@
                      
                      <p>De grondwatermonitoringput kan gerelateerd zijn aan één of meerdere verkenning(en).
                         Ieder relevante verkenning is vastgelegd als aparte keuze.</p>
-                     </td>
-               </tr>
-               <tr>
-                  <th>Toelichting</th>
-                  <td>
-                     
-                     <p>Enkel de verkenningen die direct gerelateerd zijn aan de inrichting van de grondwatermonitoringput
-                        zijn in scope.
-                        Er kunnen meerdere verkenningen zijn. Het is bijvoorbeeld denkbaar dat een booronderzoek
-                        vanuit meerdere vakgebieden wordt geproduceerd.
-                        Mogelijk zijn deze verkenningen niet altijd beschikbaar in de basisregistratie ondergrond.
-                        Bijvoorbeeld doordat het proces van boorbeschrijven nog op zich laat wachten, of vanwege
-                        het ontbreken van de geëigende booronderzoek (BHR) standaard.
-                        Voor nieuw te registreren grondwatermonitoringputten, is het verplicht om de gerelateerde
-                        verkenningen te registreren. Dit geldt uiteraard alleen indien deze verkenningen beschikbaar
-                        zijn, of later beschikbaar komen, in de basisregistratie ondergrond. 
-                        Voor grondwatermonitoringputten die reeds zijn geregistreerd in de basisregistratie
-                        ondergrond, kunnen de gerelateerde verkenningen, indien gewenst, achteraf worden toegevoegd.
-                        </p>
                      </td>
                </tr>
             </tbody>
