--- a/data/GMW-cat.respec.html
+++ b/data/GMW-cat.respec.html
@@ -170,7 +170,17 @@
                   </tr>
                   <tr>
                      <th>&nbsp;&nbsp;Naam</th>
-                     <td>KvK-nummer</td>
+                     <td>
+                        KvK-nummer
+                        </td>
+                  </tr>
+                  <tr>
+                     <th>&nbsp;&nbsp;Type</th>
+                     <td>Code</td>
+                  </tr>
+                  <tr>
+                     <th>&nbsp;&nbsp;Opbouw</th>
+                     <td>NNNNNNNN</td>
                   </tr>
                   <tr>
                      <th>Regels</th>
@@ -1317,7 +1327,7 @@
                </tbody>
             </table>
             </section>
-         <section id="detail_d77227e6039">
+         <section id="detail_d77241e6039">
             <h4>  aangeleverde locatie</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -1356,7 +1366,7 @@
                </tbody>
             </table>
          </section>
-         <section id="detail_d77227e6224">
+         <section id="detail_d77241e6224">
             <h4>  aangeleverde verticale positie</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -1394,7 +1404,7 @@
                </tbody>
             </table>
          </section>
-         <section id="detail_d77227e6409">
+         <section id="detail_d77241e6409">
             <h4>  gestandaardiseerde locatie</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -1433,7 +1443,7 @@
                </tbody>
             </table>
          </section>
-         <section id="detail_d77227e6594">
+         <section id="detail_d77241e6594">
             <h4>  registratiegeschiedenis</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -1471,7 +1481,7 @@
                </tbody>
             </table>
          </section>
-         <section id="detail_d77227e6779">
+         <section id="detail_d77241e6779">
             <h4>  putgeschiedenis</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -1510,7 +1520,7 @@
                </tbody>
             </table>
          </section>
-         <section id="detail_d77227e6964">
+         <section id="detail_d77241e6964">
             <h4>  monitoringbuis</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -2415,7 +2425,7 @@
                </tbody>
             </table>
             </section>
-         <section id="detail_d77227e10081">
+         <section id="detail_d77241e10081">
             <h4>  tussentijdse gebeurtenis</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -3993,7 +4003,7 @@
                </tbody>
             </table>
             </section>
-         <section id="detail_d77227e15882">
+         <section id="detail_d77241e15882">
             <h4>  toegepast materiaal</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -4032,7 +4042,7 @@
                </tbody>
             </table>
          </section>
-         <section id="detail_d77227e16085">
+         <section id="detail_d77241e16085">
             <h4>  filter</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -4071,7 +4081,7 @@
                </tbody>
             </table>
          </section>
-         <section id="detail_d77227e16288">
+         <section id="detail_d77241e16288">
             <h4>  stijgbuisdeel</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -4110,7 +4120,7 @@
                </tbody>
             </table>
          </section>
-         <section id="detail_d77227e16491">
+         <section id="detail_d77241e16491">
             <h4>  zandvang</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -4149,7 +4159,7 @@
                </tbody>
             </table>
          </section>
-         <section id="detail_d77227e16694">
+         <section id="detail_d77241e16694">
             <h4>  ingeplaatst deel</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -4188,7 +4198,7 @@
                </tbody>
             </table>
          </section>
-         <section id="detail_d77227e16897">
+         <section id="detail_d77241e16897">
             <h4>  geo-ohmkabel</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -5044,7 +5054,7 @@
                </tbody>
             </table>
             </section>
-         <section id="detail_d77227e20285">
+         <section id="detail_d77241e20285">
             <h4>  elektrode</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -5719,6 +5729,7 @@
       </section>
       <section id="global_class_Model_Verkenning">
          <h3>   Verkenning</h3>
+         <div class="imageinfo "><img src="data/Images/EAID_8C291C9E_538A_4d6f_9C70_631A0C326472.png" usemap="#imagemap-EAID_8C291C9E_538A_4d6f_9C70_631A0C326472" alt="Diagram "></div>
          <table style="width: 100%;">
             <colgroup style="width: 30%;"></colgroup>
             <colgroup style="width: 70%;"></colgroup>
@@ -5733,6 +5744,25 @@
                      
                      <p>De grondwatermonitoringput kan gerelateerd zijn aan één of meerdere verkenning(en).
                         Ieder relevante verkenning is vastgelegd als aparte keuze.</p>
+                     </td>
+               </tr>
+               <tr>
+                  <th>Toelichting</th>
+                  <td>
+                     
+                     <p>Enkel de verkenningen die direct gerelateerd zijn aan de inrichting van de grondwatermonitoringput
+                        zijn in scope.
+                        Er kunnen meerdere verkenningen zijn. Het is bijvoorbeeld denkbaar dat een booronderzoek
+                        vanuit meerdere vakgebieden wordt geproduceerd.
+                        Mogelijk zijn deze verkenningen niet altijd beschikbaar in de basisregistratie ondergrond.
+                        Bijvoorbeeld doordat het proces van boorbeschrijven nog op zich laat wachten, of vanwege
+                        het ontbreken van de geëigende booronderzoek (BHR) standaard.
+                        Voor nieuw te registreren grondwatermonitoringputten, is het verplicht om de gerelateerde
+                        verkenningen te registreren. Dit geldt uiteraard alleen indien deze verkenningen beschikbaar
+                        zijn, of later beschikbaar komen, in de basisregistratie ondergrond. 
+                        Voor grondwatermonitoringputten die reeds zijn geregistreerd in de basisregistratie
+                        ondergrond, kunnen de gerelateerde verkenningen, indien gewenst, achteraf worden toegevoegd.
+                        </p>
                      </td>
                </tr>
             </tbody>
