--- a/data/GMW-cat.msword.html
+++ b/data/GMW-cat.msword.html
@@ -14,8 +14,8 @@
    </head>
    <body>
       <p>Conceptual model/GMW conceptueel MIM/20231103</p>
-      <p>Imvertor: 3.0.0</p>
-      <p>Model release: Conceptualmodel-GMWconceptueelMIM-1.1-1-20231103-20231122-071115</p>
+      <p>Imvertor: Nightly-build.13</p>
+      <p>Model release: Conceptualmodel-GMWconceptueelMIM-1.1-1-20231103-20231122-071414</p>
       <hr>
       <section>
          <h1>Artikel 1 Definitie van registratieobject, entiteiten en attributen</h1>
@@ -194,7 +194,17 @@
                            </tr>
                            <tr>
                               <th>&nbsp;&nbsp;Naam</th>
-                              <td>KvK-nummer</td>
+                              <td>
+                                 KvK-nummer
+                                 </td>
+                           </tr>
+                           <tr>
+                              <th>&nbsp;&nbsp;Type</th>
+                              <td>Code</td>
+                           </tr>
+                           <tr>
+                              <th>&nbsp;&nbsp;Opbouw</th>
+                              <td>NNNNNNNN</td>
                            </tr>
                            <tr>
                               <th>Regels</th>
@@ -1341,7 +1351,7 @@
                         </tbody>
                      </table>
                      </section>
-                  <section id="detail_d77227e6039">
+                  <section id="detail_d77241e6039">
                      <h4>  aangeleverde locatie</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -1380,7 +1390,7 @@
                         </tbody>
                      </table>
                   </section>
-                  <section id="detail_d77227e6224">
+                  <section id="detail_d77241e6224">
                      <h4>  aangeleverde verticale positie</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -1418,7 +1428,7 @@
                         </tbody>
                      </table>
                   </section>
-                  <section id="detail_d77227e6409">
+                  <section id="detail_d77241e6409">
                      <h4>  gestandaardiseerde locatie</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -1457,7 +1467,7 @@
                         </tbody>
                      </table>
                   </section>
-                  <section id="detail_d77227e6594">
+                  <section id="detail_d77241e6594">
                      <h4>  registratiegeschiedenis</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -1495,7 +1505,7 @@
                         </tbody>
                      </table>
                   </section>
-                  <section id="detail_d77227e6779">
+                  <section id="detail_d77241e6779">
                      <h4>  putgeschiedenis</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -1534,7 +1544,7 @@
                         </tbody>
                      </table>
                   </section>
-                  <section id="detail_d77227e6964">
+                  <section id="detail_d77241e6964">
                      <h4>  monitoringbuis</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -2439,7 +2449,7 @@
                         </tbody>
                      </table>
                      </section>
-                  <section id="detail_d77227e10081">
+                  <section id="detail_d77241e10081">
                      <h4>  tussentijdse gebeurtenis</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -4017,7 +4027,7 @@
                         </tbody>
                      </table>
                      </section>
-                  <section id="detail_d77227e15882">
+                  <section id="detail_d77241e15882">
                      <h4>  toegepast materiaal</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -4056,7 +4066,7 @@
                         </tbody>
                      </table>
                   </section>
-                  <section id="detail_d77227e16085">
+                  <section id="detail_d77241e16085">
                      <h4>  filter</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -4095,7 +4105,7 @@
                         </tbody>
                      </table>
                   </section>
-                  <section id="detail_d77227e16288">
+                  <section id="detail_d77241e16288">
                      <h4>  stijgbuisdeel</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -4134,7 +4144,7 @@
                         </tbody>
                      </table>
                   </section>
-                  <section id="detail_d77227e16491">
+                  <section id="detail_d77241e16491">
                      <h4>  zandvang</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -4173,7 +4183,7 @@
                         </tbody>
                      </table>
                   </section>
-                  <section id="detail_d77227e16694">
+                  <section id="detail_d77241e16694">
                      <h4>  ingeplaatst deel</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -4212,7 +4222,7 @@
                         </tbody>
                      </table>
                   </section>
-                  <section id="detail_d77227e16897">
+                  <section id="detail_d77241e16897">
                      <h4>  geo-ohmkabel</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -5068,7 +5078,7 @@
                         </tbody>
                      </table>
                      </section>
-                  <section id="detail_d77227e20285">
+                  <section id="detail_d77241e20285">
                      <h4>  elektrode</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -5743,6 +5753,7 @@
                </section>
                <section id="global_class_Model_Verkenning">
                   <h3>   Verkenning</h3>
+                  <div class="imageinfo "><img src="Images/EAID_8C291C9E_538A_4d6f_9C70_631A0C326472.png" usemap="#imagemap-EAID_8C291C9E_538A_4d6f_9C70_631A0C326472" alt="Diagram "></div>
                   <table style="width: 100%;">
                      <colgroup style="width: 30%;"></colgroup>
                      <colgroup style="width: 70%;"></colgroup>
@@ -5757,6 +5768,25 @@
                               
                               <p>De grondwatermonitoringput kan gerelateerd zijn aan één of meerdere verkenning(en).
                                  Ieder relevante verkenning is vastgelegd als aparte keuze.</p>
+                              </td>
+                        </tr>
+                        <tr>
+                           <th>Toelichting</th>
+                           <td>
+                              
+                              <p>Enkel de verkenningen die direct gerelateerd zijn aan de inrichting van de grondwatermonitoringput
+                                 zijn in scope.
+                                 Er kunnen meerdere verkenningen zijn. Het is bijvoorbeeld denkbaar dat een booronderzoek
+                                 vanuit meerdere vakgebieden wordt geproduceerd.
+                                 Mogelijk zijn deze verkenningen niet altijd beschikbaar in de basisregistratie ondergrond.
+                                 Bijvoorbeeld doordat het proces van boorbeschrijven nog op zich laat wachten, of vanwege
+                                 het ontbreken van de geëigende booronderzoek (BHR) standaard.
+                                 Voor nieuw te registreren grondwatermonitoringputten, is het verplicht om de gerelateerde
+                                 verkenningen te registreren. Dit geldt uiteraard alleen indien deze verkenningen beschikbaar
+                                 zijn, of later beschikbaar komen, in de basisregistratie ondergrond. 
+                                 Voor grondwatermonitoringputten die reeds zijn geregistreerd in de basisregistratie
+                                 ondergrond, kunnen de gerelateerde verkenningen, indien gewenst, achteraf worden toegevoegd.
+                                 </p>
                               </td>
                         </tr>
                      </tbody>
