--- a/data/GMW-cat.msword.html
+++ b/data/GMW-cat.msword.html
@@ -15,7 +15,7 @@
    <body>
       <p>Conceptual model/GMW conceptueel MIM/20231103</p>
       <p>Imvertor: Nightly-build.13</p>
-      <p>Model release: Conceptualmodel-GMWconceptueelMIM-1.1-1-20231103-20231122-160707</p>
+      <p>Model release: Conceptualmodel-GMWconceptueelMIM-1.1-1-20231103-20231123-064021</p>
       <hr>
       <section>
          <h1>Artikel 1 Definitie van registratieobject, entiteiten en attributen</h1>
@@ -63,7 +63,7 @@
          <section>
             <h2>Het domeinmodel</h2>
             <section>
-               <div class="imageinfo overview"><img src="Images/EAID_E820AF53_7FB7_42e8_95C4_297D746526CE.png" usemap="#imagemap-EAID_E820AF53_7FB7_42e8_95C4_297D746526CE" alt="Diagram &#xA;                        &#xA;                     "><map name="imagemap-EAID_E820AF53_7FB7_42e8_95C4_297D746526CE"><area shape="rect" alt="Registratieobject" coords="655,42,928,217" href="#global_class_Model_Registratieobject"><area shape="rect" alt="Geotechnisch Sondeeronderzoek" coords="1336,651,1562,755" href="#global_class_Model_GeotechnischSondeeronderzoek"><area shape="rect" alt="Verkenning" coords="1116,614,1238,665" href="#global_class_Model_Verkenning"><area shape="rect" alt="Booronderzoek" coords="1336,535,1562,639" href="#global_class_Model_Booronderzoek"><area shape="rect" alt="Monitoringbuis" coords="534,805,1025,1234" href="#global_class_Model_Monitoringbuis"><area shape="rect" alt="Toegepast materiaal" coords="534,1299,806,1438" href="#global_class_Model_Toegepastmateriaal"><area shape="rect" alt="Ingeplaatst deel" coords="1168,970,1482,1108" href="#global_class_Model_Ingeplaatstdeel"><area shape="rect" alt="Zandvang" coords="1168,805,1370,910" href="#global_class_Model_Zandvang"><area shape="rect" alt="Grondwatermonitoringput" coords="564,274,1006,756" href="#global_class_Model_Grondwatermonitoringput"><area shape="rect" alt="Geo-ohmkabel" coords="147,801,345,946" href="#global_class_Model_Geoohmkabel"><area shape="rect" alt="Filter" coords="656,1472,924,1647" href="#global_class_Model_Filter"><area shape="rect" alt="Elektrode" coords="82,1017,411,1172" href="#global_class_Model_Elektrode"><area shape="rect" alt="Stijgbuisdeel" coords="779,1695,993,1799" href="#global_class_Model_Stijgbuisdeel"></map><p><b>Grondwatermonitorput (GMW)</b></p>
+               <div class="imageinfo overview"><img src="Images/EAID_E820AF53_7FB7_42e8_95C4_297D746526CE.png" usemap="#imagemap-EAID_E820AF53_7FB7_42e8_95C4_297D746526CE" alt="Diagram &#xA;                        &#xA;                     "><map name="imagemap-EAID_E820AF53_7FB7_42e8_95C4_297D746526CE"><area shape="rect" alt="Registratieobject" coords="656,42,929,217" href="#global_class_Model_Registratieobject"><area shape="rect" alt="Geotechnisch Sondeeronderzoek" coords="1338,652,1565,756" href="#global_class_Model_GeotechnischSondeeronderzoek"><area shape="rect" alt="Verkenning" coords="1118,615,1240,666" href="#global_class_Model_Verkenning"><area shape="rect" alt="Booronderzoek" coords="1338,536,1565,640" href="#global_class_Model_Booronderzoek"><area shape="rect" alt="Monitoringbuis" coords="534,806,1026,1235" href="#global_class_Model_Monitoringbuis"><area shape="rect" alt="Toegepast materiaal" coords="534,1301,808,1440" href="#global_class_Model_Toegepastmateriaal"><area shape="rect" alt="Ingeplaatst deel" coords="1170,972,1484,1110" href="#global_class_Model_Ingeplaatstdeel"><area shape="rect" alt="Zandvang" coords="1170,806,1372,912" href="#global_class_Model_Zandvang"><area shape="rect" alt="Grondwatermonitoringput" coords="564,275,1007,757" href="#global_class_Model_Grondwatermonitoringput"><area shape="rect" alt="Geo-ohmkabel" coords="148,802,346,947" href="#global_class_Model_Geoohmkabel"><area shape="rect" alt="Filter" coords="657,1475,925,1650" href="#global_class_Model_Filter"><area shape="rect" alt="Elektrode" coords="82,1018,411,1174" href="#global_class_Model_Elektrode"><area shape="rect" alt="Stijgbuisdeel" coords="780,1697,995,1801" href="#global_class_Model_Stijgbuisdeel"></map><p><b>Grondwatermonitorput (GMW)</b></p>
                </div>
             </section>
          </section>
@@ -4010,7 +4010,13 @@
                            </tr>
                            <tr>
                               <th>&nbsp;&nbsp;Naam</th>
-                              <td>IndicatieJaNeeOnbekend</td>
+                              <td>
+                                 IndicatieJaNeeOnbekend
+                                 </td>
+                           </tr>
+                           <tr>
+                              <th>&nbsp;&nbsp;Type</th>
+                              <td>Waardelijst niet uitbreidbaar</td>
                            </tr>
                            <tr>
                               <th>Materiële geschiedenis</th>
