--- a/index.html
+++ b/index.html
@@ -44,34 +44,11 @@
 		<!-- NOTE, temporarily changed the data-include from 'https://docs.geostandaarden.nl/bro/gen/algemene-kenmerken-en-begrippen.html' to 'https://raw.githubusercontent.com/BROprogramma/generiek/gh-pages/algemene-kenmerken-en-begrippen.html', in order to check the changes to Chapter 2 that have not yet been published to Geonovum. -->
 
 		<!-- 3. Grondwatermonitoring; positie GMW binnen gegevenssystematiek BRO (niet normatief c.q. niet juridisch deel) -->
-		<section id="Grondwatermonitoring" data-format="markdown" class='generic informative' data-include='https://raw.githubusercontent.com/BROprogramma/generiek/gh-pages/gm/Grondwatermonitoring.md'>
-<!--
-		<section id="Grondwatermonitoring" class='generic informative'>
-			<h2>Grondwatermonitoring1</h2>
--->
-
-			<!-- 3.1 Inleiding -->
-<!--
-			<section id="Grondwatermonitoring.Inleiding" data-include='https://raw.githubusercontent.com/BROprogramma/generiek/gh-pages/gm/data/Grondwatermonitoring.html'></section>
--->
-			<!-- (expected) link to location on docs.geostandaarden; 'https://docs.geostandaarden.nl/bro/gen/gm/data/Domein grondwatermonitoring in de BRO.html'. -->
-			<!-- Note; Instead of the 'main URL' (https://github.com/BROprogramma/generiek/raw/gh-pages/gm/data/Grondwatermonitoring.html), the above 'redirect URL' is used (the main URL seems to redirect to this alternative 'https://raw.githubusercontent.com/...' URL).
-			Initially used the 'main URL' because for a PNG image within this data-include page, the 'redirect URL' didn't seem to work.
-			However, for this html document it seems that only the 'redirect URL' works and not the 'main URL'. Weird... -->
-			
-			<!-- 3.2 Registratieobjecten binnen het domein grondwatermonitoring -->
-<!--
-			<section id="Grondwatermonitoring.Registratieobjecten" data-include='https://raw.githubusercontent.com/BROprogramma/generiek/gh-pages/gm/data/Domein grondwatermonitoring in de BRO.html'></section>
--->
-			<!-- (expected) link to location on docs.geostandaarden; 'https://docs.geostandaarden.nl/bro/gen/gm/data/Domein grondwatermonitoring in de BRO.html'. -->
-			
-			<!-- 3.3 Samenhang en consistentie tussen verschillende registratieobjecten in het Grondwaterdomein -->
-<!--
-			<section id="Grondwatermonitoring.Samenhang en consistentie GM-ROs" data-format="markdown" data-include='https://raw.githubusercontent.com/BROprogramma/generiek/gh-pages/gm/Samenhang_RO_GM_domein.md'></section>
--->
-			<!-- (expected) link to location on docs.geostandaarden; 'https://docs.geostandaarden.nl/bro/gen/gm/data/Samenhang_RO_GM_domein.html'. -->
-			
-		
+		<section
+			id="Grondwatermonitoring"
+			data-format="markdown"
+			class='generic informative'
+			data-include='https://raw.githubusercontent.com/BROprogramma/generiek/gh-pages/gm/Grondwatermonitoring.md'>	
 		</section>
 
 		<!-- hoofdstuk 4 Grondwatermonitoringput (normatieve/juridische deel) -->
