--- a/index.html
+++ b/index.html
@@ -38,22 +38,28 @@
 				</section>
 		</section>
 
-		<!-- Algemene kenmerken en bergippen -->
-		<!-- hoofdstuk 2 -->
-		<section id='algemene-kenmerken-en-begrippen' data-include='https://raw.githubusercontent.com/BROprogramma/generiek/gh-pages/algemene-kenmerken-en-begrippen.html' class='generic informative'></section>
-		<!-- NOTE, temporarily changed the data-include from 'https://docs.geostandaarden.nl/bro/gen/algemene-kenmerken-en-begrippen.html' to 'https://raw.githubusercontent.com/BROprogramma/generiek/gh-pages/algemene-kenmerken-en-begrippen.html', in order to check the changes to Chapter 2 that have not yet been published to Geonovum. -->
-
-		<!-- 3. Grondwatermonitoring; positie GMW binnen gegevenssystematiek BRO (niet normatief c.q. niet juridisch deel) -->
+		<!-- Hoofdstuk 2. Algemene kenmerken en bergippen -->
 		<section
-			id="Grondwatermonitoring"
-			data-format="markdown"
-			class='generic informative'
-			data-include='https://raw.githubusercontent.com/BROprogramma/generiek/gh-pages/gm/Grondwatermonitoring.md'>	
+			id='algemene-kenmerken-en-begrippen'
+			data-include='https://raw.githubusercontent.com/BROprogramma/generiek/gh-pages/algemene-kenmerken-en-begrippen.html'
+					<!-- NOTE, temporarily changed the data-include from 'https://docs.geostandaarden.nl/bro/gen/algemene-kenmerken-en-begrippen.html' to 'https://raw.githubusercontent.com/BROprogramma/generiek/gh-pages/algemene-kenmerken-en-begrippen.html', in order to check the changes to Chapter 2 that have not yet been published to Geonovum. -->
+			class='generic informative'>
 		</section>
 
-		<!-- hoofdstuk 4 Grondwatermonitoringput (normatieve/juridische deel) -->
-		<section id='Grondwatermonitoringput'>
+		<!-- Hoofdstuk 3. Grondwatermonitoring; positie GMW binnen gegevenssystematiek BRO (niet normatief c.q. niet juridisch deel) -->
+		<section
+			id="Grondwatermonitoring"
+			data-include='https://raw.githubusercontent.com/BROprogramma/generiek/gh-pages/gm/Grondwatermonitoring.md'
+			data-format="markdown"
+			class='generic informative'>
+		</section>
+
+		<!-- Hoofdstuk 4. Grondwatermonitoringput (normatieve/juridische deel) -->
+		<section
+			id='Grondwatermonitoringput'>
+
 			<h2>Grondwatermonitoringput</h2>
+
 			<!-- 4.1 Inleiding -->
 			<section id='GMW inleiding' data-include='./data/GMW normatief, inleiding.html'></section>
 
@@ -64,9 +70,11 @@
 			<section id="INSPIRE" data-include='./data/INSPIRE.html'></section>
 		</section>
 
-		<!-- introductie gegevensdefinitie generiek -->
-		<!-- hoofdstuk 5 -->
-		<section id="intro-gegevensdefinitie" class='generic informative'>
+		<!-- Hoofdstuk 5. Opbouw van de gegevensdefinitie -->
+		<section
+			id="intro-gegevensdefinitie"
+			class='generic informative'>
+
 			<h2>Opbouw van de gegevensdefinitie</h2>
 			<section id="intro-cat-inleiding" data-include="https://docs.geostandaarden.nl/bro/gen/intro-cat-inleiding.html"></section>
 			<section id="domeinen">
@@ -96,8 +104,11 @@
 			<section id="verplichte-gegevens-waarden" data-include="https://docs.geostandaarden.nl/bro/gen/verplichte-gegevens-waarden.html"></section>
 		</section>
 
-		<!-- Model -->
-		<!-- hoofdstuk 6 en Hoofdstuk 7 -->
-		<div data-include="data/GMW-cat.respec.html" data-include-replace=true></div>
+		<!-- Hoofdstukken 6 en 7. Gegevensdefinitie en Uitbreidbare waardenlijsten  -->
+		<div
+			data-include="data/GMW-cat.respec.html"
+			data-include-replace=true>
+		</div>
+		
 	</body>
 </html>
