--- a/index.html
+++ b/index.html
@@ -20,13 +20,14 @@
 		<!-- Note, using <section id='sotd'/> would result in table of content not showing up.
 		It turns out that it is very important to use explicit opening and closing XML element tags, at least with regards to section.-->
 
-		<!-- inleiding -->
+		<!-- Hoofdstuk 1. Inleiding -->
 		<section id='inleiding' class='generic informative'>
 			<h2>Inleiding</h2>
-				<section id='doel-en-doelgroep' data-include='https://docs.geostandaarden.nl/bro/gen/doel-en-doelgroep.html'></section>
-				<section id='totstandkoming' data-include='https://docs.geostandaarden.nl/bro/gen/totstandkoming.html'></section>
-				<section id='beheer' data-include='https://docs.geostandaarden.nl/bro/gen/beheer.html'></section>
-				<section id="leeswijzer">
+				<section
+					id="leeswijzer"
+					data-include="leeswijzer.md"
+					data-format="markdown">
+<!--
 					<h3>Leeswijzer</h3>
 						<p><a href ="#inleiding">Hoofdstuk 1</a> geeft het doel en de doelgroep van een catalogus.</p>
 						<p><a href ="#algemene-kenmerken-en-begrippen">Hoofdstuk 2</a> behandelt enkele algemene aspecten van het BRO-systeem en begrippen van algemene aard.</p>
@@ -35,7 +36,12 @@
 						<p><a href ="#intro-gegevensdefinitie">Hoofdstuk 5</a> vertelt hoe de gegevensdefinitie is opgebouwd en welke aspecten van de gegevens daarin worden beschreven.</p>
 						<p><a href ="#gegevensdefinitie">Hoofdstuk 6</a> geeft de inhoud weer van het eerste artikel van de ministeriële regeling en dat is het deel waarin de definitie is opgenomen van het registratieobject, van de delen waaruit het is opgebouwd, de entiteiten, en van de eigenschappen van die delen, de attributen.</p>
 						<p><a href ="#uitbreidbare-waardelijsten">Hoofdstuk 7</a> geeft de inhoud weer van het tweede artikel van de ministeriële regeling en dat is het deel waarin uitbreidbare waardelijsten staan waarnaar in hoofdstuk 6 verwezen wordt.</p>
+-->						
+				
 				</section>
+				<section id='doel-en-doelgroep' data-include='https://docs.geostandaarden.nl/bro/gen/doel-en-doelgroep.html'></section>
+				<section id='totstandkoming' data-include='https://docs.geostandaarden.nl/bro/gen/totstandkoming.html'></section>
+				<section id='beheer' data-include='https://docs.geostandaarden.nl/bro/gen/beheer.html'></section>
 		</section>
 
 		<!-- Hoofdstuk 2. Algemene kenmerken en bergippen -->
