--- a/index.html
+++ b/index.html
@@ -49,18 +49,21 @@
 
 		<!-- Hoofdstuk 4. Grondwatermonitoringput (normatieve/juridische deel) -->
 		<section
-			id='Grondwatermonitoringput'>
+			id='Grondwatermonitoringput'
+			data-include='toelichting.md'
+			data-format="markdown">
 
-			<h2>Grondwatermonitoringput</h2>
+<!--			<h2>Grondwatermonitoringput</h2>
 
 			<!-- 4.1 Inleiding -->
-			<section id='GMW inleiding' data-include='./data/GMW normatief, inleiding.html'></section>
+<!--			<section id='GMW inleiding' data-include='./data/GMW normatief, inleiding.html'></section>
 
 			<!-- 4.2 Belangrijkste entiteiten -->
-			<section id='Belangrijkste entiteiten' data-include='./data/Belangrijkste entiteiten.html'></section>
+<!--			<section id='Belangrijkste entiteiten' data-include='./data/Belangrijkste entiteiten.html'></section>
 
 			<!-- 4.3 INSPIRE (INSPIRE-thema Geology) -->
-			<section id="INSPIRE" data-include='./data/INSPIRE.html'></section>
+<!--			<section id="INSPIRE" data-include='./data/INSPIRE.html'></section>
+-->
 		</section>
 
 		<!-- Hoofdstuk 5. Opbouw van de gegevensdefinitie -->
