--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 		<!-- Hoofdstuk 1. Inleiding -->
 		<section id='inleiding' class='generic informative'>
 			<h2>Inleiding</h2>
-				<section id="leeswijzer" data-include="leeswijzer.md" data-include-format="markdown"></section>
+				<section id='leeswijzer' data-include='leeswijzer.md' data-include-format='markdown'></section>
 				<section id='doel-en-doelgroep' data-include='https://docs.geostandaarden.nl/bro/gen/doel-en-doelgroep.html'></section>
 				<section id='totstandkoming' data-include='https://docs.geostandaarden.nl/bro/gen/totstandkoming.html'></section>
 				<section id='beheer' data-include='https://docs.geostandaarden.nl/bro/gen/beheer.html'></section>
@@ -43,11 +43,7 @@
 		</section>
 
 		<!-- Hoofdstuk 3. Grondwatermonitoring; positie GMW binnen gegevenssystematiek BRO (niet normatief c.q. niet juridisch deel) -->
-		<section
-			id="Grondwatermonitoring"
-			data-include='https://raw.githubusercontent.com/BROprogramma/generiek/gh-pages/gm/grondwatermonitoring.md'
-			data-include-format="markdown"
-			class='generic informative'>
+		<section id='Grondwatermonitoring' data-include='https://raw.githubusercontent.com/BROprogramma/generiek/gh-pages/gm/grondwatermonitoring.md'data-include-format='markdown' class='generic informative'>
 			<!--
 			NOTE, JV, 06-12-2023: In the final GMW catalogue the data-include must be changed into 'https://docs.geostandaarden.nl/bro/gen/gm/Grondwatermonitoring.md.
 			-->
@@ -57,7 +53,7 @@
 		<section
 			id='Grondwatermonitoringput'
 			data-include='toelichting.md'
-			data-include-format="markdown">
+			data-include-format='markdown'>
 
 <!--			<h2>Grondwatermonitoringput</h2>
 
