--- a/index.html
+++ b/index.html
@@ -43,10 +43,7 @@
 		</section>
 
 		<!-- Hoofdstuk 3. Grondwatermonitoring; positie GMW binnen gegevenssystematiek BRO (niet normatief c.q. niet juridisch deel) -->
-<!--		<section id='Grondwatermonitoring' data-include='https://raw.githubusercontent.com/BROprogramma/generiek/gh-pages/gm/grondwatermonitoring.md'data-include-format='markdown' class='generic informative'>
--->
-
-<section id='Grondwatermonitoring' data-include='grondwatermonitoring-test.md'data-include-format='markdown' class='generic informative'>		
+		<section id='Grondwatermonitoring' data-include='https://raw.githubusercontent.com/BROprogramma/generiek/gh-pages/gm/grondwatermonitoring.md'data-include-format='markdown' class='generic informative'>
 
 		<!--
 			NOTE, JV, 06-12-2023: In the final GMW catalogue the data-include must be changed into 'https://docs.geostandaarden.nl/bro/gen/gm/Grondwatermonitoring.md.
