--- a/index.html
+++ b/index.html
@@ -18,13 +18,11 @@
 	</head>
 	
 	<body>
-		<!--samenvatting-->
+		<!-- Damenvatting -->
 		<section id="abstract" data-include-format="markdown" data-include='samenvatting.md'></section>
 
-		<!-- status document -->
+		<!-- Status van dit document document -->
 		<section id='sotd'></section>
-		<!-- NOTE: using <section id='sotd'/> would result in table of content not showing up.
-		It turns out that it is very important to use explicit opening and closing XML element tags, at least with regards to section.-->
 
 		<!-- Hoofdstuk 1. Inleiding -->
 		<section id='inleiding' class='generic informative'>
@@ -36,16 +34,21 @@
 		</section>
 
 		<!-- Hoofdstuk 2. Algemene kenmerken en bergippen -->
-		<section id='algemene-kenmerken-en-begrippen' data-include='https://raw.githubusercontent.com/BROprogramma/generiek/gh-pages/algemene-kenmerken-en-begrippen.html' class='generic informative'>
+		<section
+			id='algemene-kenmerken-en-begrippen'
+			data-include='https://raw.githubusercontent.com/BROprogramma/generiek/gh-pages/algemene-kenmerken-en-begrippen.html'
+			class='generic informative'>
 			<!--
 			NOTE: temporarily changed the data-include from 'https://docs.geostandaarden.nl/bro/gen/algemene-kenmerken-en-begrippen.html' to 'https://raw.githubusercontent.com/BROprogramma/generiek/gh-pages/algemene-kenmerken-en-begrippen.html', in order to check the changes to Chapter 2 that have not yet been published to Geonovum.
 			-->
 		</section>
 
-		<!-- Hoofdstuk 3. Grondwatermonitoring; positie GMW binnen gegevenssystematiek BRO (niet normatief c.q. niet juridisch deel) -->
-		<section id='Grondwatermonitoring' data-include='https://raw.githubusercontent.com/BROprogramma/generiek/gh-pages/gm/grondwatermonitoring.md'data-include-format='markdown' class='generic informative'>
-
-		<!--
+		<!-- Hoofdstuk 3. Grondwatermonitoring -->
+		<section
+			id='Grondwatermonitoring'
+			data-include='https://raw.githubusercontent.com/BROprogramma/generiek/gh-pages/gm/grondwatermonitoring.md'
+			data-include-format='markdown' class='generic informative'>
+			<!--
 			NOTE, JV, 06-12-2023: In the final GMW catalogue the data-include must be changed into 'https://docs.geostandaarden.nl/bro/gen/gm/Grondwatermonitoring.md.
 			-->
 		</section>
@@ -55,18 +58,6 @@
 			id='Grondwatermonitoringput'
 			data-include='toelichting.md'
 			data-include-format='markdown'>
-
-<!--			<h2>Grondwatermonitoringput</h2>
-
-			<!-- 4.1 Inleiding -->
-<!--			<section id='GMW inleiding' data-include='./data/GMW normatief, inleiding.html'></section>
-
-			<!-- 4.2 Belangrijkste entiteiten -->
-<!--			<section id='Belangrijkste entiteiten' data-include='./data/Belangrijkste entiteiten.html'></section>
-
-			<!-- 4.3 INSPIRE (INSPIRE-thema Geology) -->
-<!--			<section id="INSPIRE" data-include='./data/INSPIRE.html'></section>
--->
 		</section>
 
 		<!-- Hoofdstuk 5. Opbouw van de gegevensdefinitie -->
