--- a/index.html
+++ b/index.html
@@ -97,7 +97,8 @@
 		data-include="data/GMW-cat.respec.html"
 		data-include-replace=true>
 	</div>
-	
+
+	<!--script src="https://docs.geostandaarden.nl/bro/gen/js/resizeImageMap.js"></script-->
 	<!-- Leaflet required for panZoomImage-->
 	<link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin="" />
 	<script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
